crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__value_vec_type_with_lifetime.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C)]
struct Foo<'a>(pub ::css_parse::CommaSeparated<'a, crate::Value<'a, crate::Image<'a>>>);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
