crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__value_with_derive_parse_skips_impl.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo {
    #[atom(CssAtomSet::Foo)]
    Foo(::css_parse::T![Ident]),
    #[atom(CssAtomSet::Bar)]
    Bar(::css_parse::T![Ident]),
}
#[cfg(test)]
::stable_type_layout::register!(Foo);
