crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__value_with_multiplier_range.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
struct Foo<'a>(
    pub crate::CalcableValue<'a, crate::Length>,
    pub crate::CalcableValue<'a, crate::Length>,
    pub Option<crate::CalcableValue<'a, crate::Length>>,
    pub Option<crate::CalcableValue<'a, crate::Length>>,
);
